# game-audio

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  PYTHON_BINDINGS.md  README.md  RELEASE_MANAGEMENT.md  generate_docs.bat  generate_docs.sh  pyproject.toml  test_audio_simple.py  test_wheel.py
.github/workflows/: build_wheels.yml  docs.yml  release.yml  test.yml
audio/: audio_group.cc  audio_group.cpp  audio_group.h  audio_manager.cc  audio_manager.cpp  audio_manager.h  audio_system.cc  audio_system.cpp  audio_system.h  audio_track.cc  audio_track.cpp  audio_track.h  miniaudio.cpp  music_player.cpp  music_player.h  random_sound_container.cpp  random_sound_container.h  sfx_player.cpp  sfx_player.h  sound.cc  sound.h  test_audio.cpp
audio_py/: __init__.py
bindings/: audio_manager.cpp  audio_session.cpp  bindings.cpp  random_sound_container.cpp  sfx_player.cpp
cmake/: AudioModuleConfig.cmake.in
examples/: overlapping_spatial_sounds.py  python_example.py  python_interactive.py  spatial_audio_example.py  test_audio.cpp  test_audio_2.cpp
game_audio/: __init__.py
scripts/: build.ps1  build_versioned_docs.sh  inject_version_switcher.sh
src/: audio_group.cpp  audio_group.h  audio_manager.cpp  audio_manager.h  audio_session.cpp  audio_session.h  audio_system.cpp  audio_system.h  audio_track.cpp  audio_track.h  logging.cpp  logging.h  path_utils.cpp  path_utils.h  random_sound_container.cpp  random_sound_container.h  sfx_player.cpp  sfx_player.h  sound.cpp  sound.h  vec3.h
tests/: run_all_python_tests.ps1  run_all_tests.ps1  test_automated.cpp  test_comprehensive.py  test_cross_platform.ps1  test_shutdown.py
tests/cpp/: compile_flags.txt  test_audio_groups.cpp  test_audio_initialization.cpp  test_audio_logging.cpp  test_audio_manager_basic.cpp  test_audio_manager_error_handling.cpp  test_audio_resources.cpp  test_audio_sounds.cpp  test_audio_spatial.cpp  test_audio_threading.cpp  test_audio_tracks.cpp  test_audio_validation.cpp  test_audio_volume.cpp  test_common.cpp  test_common.h
tests/python/: test_audio_groups.py  test_audio_initialization.py  test_audio_logging.py  test_audio_manager_basic.py  test_audio_manager_comprehensive.py  test_audio_manager_error_handling.py  test_audio_resources.py  test_audio_sounds.py  test_audio_spatial.py  test_audio_threading.py  test_audio_tracks.py  test_audio_validation.py  test_audio_volume.py  test_common.py
tests/scripts/: run_all_tests.ps1  run_cpp_tests.ps1  run_python_tests.ps1  test_cross_platform.ps1  test_wheel_installation.ps1  test_wheel_installation.sh
