[build-system]
requires = ["scikit-build-core>=0.4.3", "cmake>=3.10", "pybind11>=2.6.0", "ninja", "pybind11-stubgen"]
build-backend = "scikit_build_core.build"

[project]
name = "game-audio"
version = "2.1.0"
description = "Python bindings for Game Audio Module - a C++ audio system built on miniaudio"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Unlicense"}
authors = [
    {name = "Hanna Harmon", email = "hanna.marie.harmon@gmail.com"}
]
keywords = ["audio", "game", "sound", "music", "miniaudio", "pybind11"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
]

[project.urls]
Homepage = "https://github.com/hannaharmon/game-audio"
Documentation = "https://hannaharmon.github.io/game-audio"
Repository = "https://github.com/hannaharmon/game-audio"
Issues = "https://github.com/hannaharmon/game-audio/issues"

[tool.scikit-build]
# CMake configuration for scikit-build-core
cmake.minimum-version = "3.10"
cmake.args = [
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DBUILD_AUDIO_TESTS=OFF",
    "-DBUILD_AUDIO_EXAMPLES=OFF",
]

[tool.scikit-build.cmake.define]
# Ensure Python bindings are built
BUILD_PYTHON_BINDINGS = "ON"
BUILD_AUDIO_TESTS = "OFF"
BUILD_AUDIO_EXAMPLES = "OFF"
# Note: Logging is always enabled (controlled at runtime via set_log_level)

[tool.scikit-build.wheel]
# Package the game_audio module and __init__.py
# scikit-build-core will automatically detect packages from CMake install() commands
# The compiled extension (.pyd/.so) will be included automatically from CMake install
packages = ["game_audio"]
exclude = ["tests", "examples", "*.tests", "*.tests.*", "tests.*"]